# stm32-rust-starter

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
src/: main.rs
