[package]
edition = "2021"     # 2018
name = "blinky-rust"
version = "0.1.0"

[profile.release]
opt-level = 'z' # turn on maximum optimizations. We only have 64kB
lto = true      # Link-time-optimizations for further size reduction

[dependencies]
cortex-m = "^0.6.3"     # Access to the generic ARM peripherals
cortex-m-rt = "^0.6.12" # Startup code for the ARM Core
embedded-hal = "^0.2.4" # Access to generic embedded functions (`set_high`)
panic-halt = "^0.2.0"   # Panic handler

stm32f1xx-hal = { version = "0.6.1", features = ["stm32f103", "rt", "medium"] }
#stm32f303xc

# .cargo/config specifies the default target