[package]
edition = "2021"         # 2018
name = "rust-stm32-2023"
version = "0.1.0"

[profile.release]
opt-level = 'z' # turn on maximum optimizations. We only have 64kB
lto = true      # Link-time-optimizations for further size reduction

[dependencies]
# embedded-hal = "^0.2.4" # Access to generic embedded functions (`set_high`)
cortex-m = { version = "0.7.4", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7.3", features = ["device"] }
# Panic behavior, see https://crates.io/keywords/panic-impl for alternatives
# panic-halt = "0.2.0"
# "ld" provides memory.x. Replace stm32f303xc with your target chip, see next section for more info
stm32f3xx-hal = { version = "0.10.0", features = ["ld", "rt", "stm32f303xc"] }
cortex-m-rtic = "1.1"
cortex-m-semihosting = "0.5.0"
defmt = "0.3.5"
defmt-rtt = "0.4.0"
defmt-test = "0.3.1"
panic-probe = "0.3.1"
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
panic-semihosting = "0.6.0"
rtt-target = { version = "0.4.0" }
# systick-monotonic = "1.0"


#stm32f303xc

# .cargo/config specifies the default target
